# OrthoMeshTools

./: .gitignore  CMakeLists.txt  CMakePresets.json  EasyOBJ.h  LICENCE  MathTypeConverter.h  Ortho.cpp  Ortho.h  Polyhedron.cpp  Polyhedron.h  PyBind.cpp  README.md  build.bat  print.cpp  print.h  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
ColorMeshByCurv/: ColorMeshByCurv.cpp
ColorMeshByLabel/: ColorMeshByLabel.cpp  ColorMeshByLabel.h  ColorMeshByLabelApp.cpp
FakeToothRoot/: FakeToothRoot.cpp  FakeToothRoot.h  FakeToothRootApp.cpp
GumLineCompare/: GumLineCompare.cpp
GumTrimLine/: GumTrimLine.cpp  GumTrimLine.h  GumTrimLineApp.cpp
HoleMerge/: HoleMerge.cpp  HoleMerge.h  HoleMergeApp.cpp
MeshFix/: MeshFix.cpp  MeshFix.h  MeshFixApp.cpp
MoveTeeth/: MoveTeeth.cpp
OrthoScanBase/: OrthoScanBase.cpp  OrthoScanBase.h  OrthoScanBaseApp.cpp
OrthoScanDeform/: OrthoScanDeform.h  OrthoScanDeformApp.cpp
OrthoScanPath/: OrthoScanPath.cpp  OrthoScanPath.h  OrthoScanPathApp.cpp
ReSegment/: ReSegment.cpp  ReSegment.h  ReSegmentApp.cpp
SegClean/: SegClean.cpp  SegClean.h  SegCleanApp.cpp
